--- a/css-easing.cabal
+++ b/css-easing.cabal
@@ -15,8 +15,11 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
+  exposed-modules:
+        Css.Easing
+  build-depends:
+        base >= 4.7 && < 5
+      , scientific >= 0.3 && <0.4
   default-language:    Haskell2010
 
 source-repository head
