change css-easing to css-easings

--- a/css-easings.cabal
+++ b/css-easings.cabal
@@ -1,8 +1,8 @@
-name:                css-easing
+name:                css-easings
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/KommuSoft/css-easing#readme
+homepage:            https://github.com/KommuSoft/css-easings#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Willem Van Onsem
@@ -24,4 +24,4 @@ library
 
 source-repository head
   type:     git
-  location: https://github.com/KommuSoft/css-easing
+  location: https://github.com/KommuSoft/css-easings
