--- a/css-easings.cabal
+++ b/css-easings.cabal
@@ -18,9 +18,10 @@ library
   exposed-modules:
         Css.Easing
   build-depends:
-      base >= 4.7 && < 5
+      base >=4.7 && <5
     , data-default >=0.7 && <0.8
-    , scientific >= 0.3 && <0.4
+    , QuickCheck >=2.13 && <2.14
+    , scientific >=0.3 && <0.4
   default-language:    Haskell2010
 
 source-repository head
