--- a/css-easings.cabal
+++ b/css-easings.cabal
@@ -19,9 +19,13 @@ library
         Css.Easing
   build-depends:
       base >=4.7 && <5
+    , aeson >=1.0 && <2
+    , blaze-markup >=0.8 && <0.9
     , data-default >=0.7 && <0.8
     , QuickCheck >=2.13 && <2.14
     , scientific >=0.3 && <0.4
+    , shakespeare >=2.0 && <3.0
+    , text >=1.1 && <1.3
   default-language:    Haskell2010
 
 source-repository head
