--- a/css-easings.cabal
+++ b/css-easings.cabal
@@ -1,6 +1,6 @@
 name:                css-easings
 version:             0.1.0.0
--- synopsis:
+synopsis:            A package to define css easing strings. These can be used in Julius, JSON, etc. templates to limit the easings to valid ones.
 -- description:
 homepage:            https://github.com/KommuSoft/css-easings#readme
 license:             BSD3
