--- a/css-easings.cabal
+++ b/css-easings.cabal
@@ -1,10 +1,10 @@
 name:                css-easings
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            Defining and manipulating css easing strings.
 description:
   A package to define css easing strings. These can be used in Julius,
   JSON, etc. templates to limit the easings to valid ones.
-homepage:            https://github.com/KommuSoft/css-easings#readme
+homepage:            https://github.com/hapytex/css-easings#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Willem Van Onsem
@@ -12,7 +12,9 @@ maintainer:          hapytexeu@gmail.com
 copyright:           2019 Willem Van Onsem
 category:            webdevelopment
 build-type:          Simple
-extra-source-files:  README.md
+extra-source-files:
+    README.md
+  , CHANGELOG.md
 cabal-version:       >=1.10
 
 library
@@ -32,4 +34,4 @@ library
 
 source-repository head
   type:     git
-  location: https://github.com/KommuSoft/css-easings
+  location: https://github.com/hapytex/css-easings
