--- a/css-easings.cabal
+++ b/css-easings.cabal
@@ -26,6 +26,7 @@ library
     , aeson >=1.0 && <2
     , blaze-markup >=0.8 && <0.9
     , data-default >=0.7 && <0.8
+    , deepseq >=1.4.3.0
     , QuickCheck >=2.8 && <2.15
     , scientific >=0.3 && <0.4
     , shakespeare >=2.0 && <3.0
