--- a/css-easings.cabal
+++ b/css-easings.cabal
@@ -25,7 +25,7 @@ library
       base >=4.7 && <5
     , aeson >=1.0 && <2
     , blaze-markup >=0.8 && <0.9
-    , data-default >=0.7 && <0.8
+    , data-default-class >=0.0.1
     , deepseq >=1.4.3.0
     , QuickCheck >=2.8 && <2.15
     , scientific >=0.3 && <0.4
