--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -81,6 +81,11 @@ jobs:
     - name: make Haddock documentation
       uses: hapytex/github-actions/actions/run-haddock@master
       id: haddock
+    - name: Add cname to the directory
+      uses: hapytex/github-actions/actions/add-cname-to-directory@master
+      with:
+        folder: "${{ steps.haddock.outputs.haddock-path }}"
+        cname: "css-easings.django-antipatterns.com"
     - name: deploy the documentation on the GitHub pages
       uses: JamesIves/github-pages-deploy-action@4.0.0
       with:
